RESOLVED FIXED115499
AX: aria-checked not exposed correctly on menuitemcheckbox or menuitemradio roles
https://bugs.webkit.org/show_bug.cgi?id=115499
Summary AX: aria-checked not exposed correctly on menuitemcheckbox or menuitemradio r...
James Craig
Reported 2013-05-01 16:59:03 PDT
AX: aria-checked not exposed correctly on menuitemcheckbox or menuitemradio roles https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/_/777.htm
Attachments
patch (5.98 KB, patch)
2013-05-02 23:30 PDT, chris fleizach
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 (505.00 KB, application/zip)
2013-05-03 01:16 PDT, Build Bot
no flags
patch (6.13 KB, patch)
2013-05-03 08:57 PDT, chris fleizach
no flags
patch (6 bytes, patch)
2013-05-04 00:21 PDT, chris fleizach
no flags
patch (6.25 KB, patch)
2013-05-04 00:22 PDT, chris fleizach
no flags
Radar WebKit Bug Importer
Comment 1 2013-05-01 16:59:18 PDT
James Craig
Comment 2 2013-05-01 17:01:18 PDT
Expected AXMenuItemMarkChar: ✓
chris fleizach
Comment 3 2013-05-02 23:30:50 PDT
Build Bot
Comment 4 2013-05-03 01:16:07 PDT
Comment on attachment 200390 [details] patch Attachment 200390 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/388385 New failing tests: platform/mac/accessibility/aria-menuitem-checked-value.html
Build Bot
Comment 5 2013-05-03 01:16:09 PDT
Created attachment 200393 [details] Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-12 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.2
chris fleizach
Comment 6 2013-05-03 08:57:26 PDT
chris fleizach
Comment 7 2013-05-03 18:14:11 PDT
Comment on attachment 200416 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=200416&action=review > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:2301 > + return (m_object->isChecked()) ? @"â" : nil; this is the checkmark that the Mac returns for selected menu items
Tim Horton
Comment 8 2013-05-03 18:22:59 PDT
Comment on attachment 200416 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=200416&action=review >> Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:2301 >> + return (m_object->isChecked()) ? @"â" : nil; > > this is the checkmark that the Mac returns for selected menu items Can we use [NSString stringWithUTF8String:"\xe2\x9c\x93"] instead? My understanding is that using unicode in objc string literals is a Bad Idea regardless of file encoding. Alexey or Dan would know better though.
Alexey Proskuryakov
Comment 9 2013-05-04 00:11:01 PDT
IIRC this works just fine starting with Lion (as long as source file encoding is set to UTF-8 in Xcode project file).
chris fleizach
Comment 10 2013-05-04 00:21:21 PDT
chris fleizach
Comment 11 2013-05-04 00:22:11 PDT
WebKit Commit Bot
Comment 12 2013-05-05 16:24:58 PDT
Comment on attachment 200520 [details] patch Clearing flags on attachment: 200520 Committed r149581: <http://trac.webkit.org/changeset/149581>
WebKit Commit Bot
Comment 13 2013-05-05 16:25:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.