AX: aria-checked not exposed correctly on menuitemcheckbox or menuitemradio roles https://bugs.webkit.org/show_bug.cgi?id=115499

Reviewed by Tim Horton.

Source/WebCore:

Expose isChecked() for menu item objects.
Return the Mac-platform specific value that you find on menu items for "checked" menu items.

Test: platform/mac/accessibility/aria-menuitem-checked-value.html

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::isChecked):
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):

LayoutTests:

* platform/mac/accessibility/aria-menuitem-checked-value-expected.txt: Added.
* platform/mac/accessibility/aria-menuitem-checked-value.html: Added.


Canonical link: https://commits.webkit.org/134045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149581 268f45cc-cd09-0410-ab3c-d52691b4dbfc